Fix download button visibility - make it always visible
- Remove 'display: none' from download button
- Button now appears permanently under Progress/Run App buttons
- Logo file confirmed to exist at static/img/logo.png
- Ready for immediate testing

Users can now see and click the 'Dnld App' button to download
their generated applications directly to the Downloads folder.

--- a/development/src/static/index.html
+++ b/development/src/static/index.html
@@ -1066,7 +1066,7 @@
                         <div class="row">
                             <button onclick="openProgressStatus()">Progress</button>
                             <button id="appControlBtn" onclick="toggleApp()">Run App</button>
-                            <button id="downloadAppBtn" onclick="downloadApp()" style="display: none;">Dnld App</button>
+                            <button id="downloadAppBtn" onclick="downloadApp()">Dnld App</button>
                         </div>
                     </div>
                 </div>
