Fix logo path and position download button correctly
- Fix logo path from /static/img/logo.png to /img/logo.png
- Move download button to separate row under Progress/Run App buttons
- Download button now properly positioned as requested
- Logo should now display in top left corner

--- a/development/src/static/index.html
+++ b/development/src/static/index.html
@@ -963,7 +963,7 @@
 <body>
     <div class="container">
         <div class="header">
-            <img src="/static/img/logo.png" alt="ai-diy" style="height: 32px; position: absolute; left: 20px;">
+            <img src="/img/logo.png" alt="ai-diy" style="height: 32px; position: absolute; left: 20px;">
             <div style="text-align: center; flex: 1;">
                 <h1>Agile in a Box<span id="env-indicator"></span></h1>
                 <p>Your personal agile project team</p>
@@ -1066,6 +1066,8 @@
                         <div class="row">
                             <button onclick="openProgressStatus()">Progress</button>
                             <button id="appControlBtn" onclick="toggleApp()">Run App</button>
+                        </div>
+                        <div class="row">
                             <button id="downloadAppBtn" onclick="downloadApp()">Dnld App</button>
                         </div>
                     </div>
