--- a/development/src/static/index.html
+++ b/development/src/static/index.html
@@ -963,7 +963,7 @@
 <body>
     <div class="container">
         <div class="header">
-            <img src="/static/img/logo.png" alt="ai-diy" style="height: 32px; position: absolute; left: 20px;">
+            <img src="/static/logo.png" alt="ai-diy" style="height: 32px; position: absolute; left: 20px;">
             <div style="text-align: center; flex: 1;">
                 <h1>Agile in a Box<span id="env-indicator"></span></h1>
                 <p>Your personal agile project team</p>
